src/main/webapp/static/css/style.css
/**
 * Copyright 2009 Robin Komiwes, Bruno Verachten, Christophe Cordenier
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * 	http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
Theme inspired from kuler scheme : http://kuler.adobe.com/#themeID/617195
	2F2F32	6E6D65 	C9BB9B	FFD8A1	FF7351
*/
@import url("reset.css");

/*****
 * GLOBAL 
 */

/* common tags */
body { background: #FFD8A1 url('../img/top_bg.png') repeat-x scroll; font-family: Helvetica, Arial, sans-serif; font-size: 14px; text-align: center}

.wrapper { clear: both; margin: 0 auto; width: 760px; padding: 0px; text-align:left;}

/* lists */
ol, ul { list-style-position:outside; padding: 10px 5px; margin:0px 20px; }
ol { list-style-type:decimal; }
ul { list-style-type:disc; }

/* links */
a { color: #FF7351;}

/* forms */
input { border: 1px solid #6E6D65; font-family: Helvetica, Arial, sans-serif; font-size:14px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; padding:5px 0px; }
input[type="checkbox"] { width:auto !important; }

/* others */
p, blockquote, pre { margin: 10px 0px; }
quote, blockquote {	font-family: Georgia; font-style: italic;  }
blockquote, pre { margin-left:40px; padding-left:10px; border-left:1px solid black; }
pre { font-size:12px; white-space:normal; }

small { font-size: 12px; font-style:italic;}

/*****
 * UTILITY CLASSES
 */
.radied { border-radius: 10px; -moz-border-radius: 10px; -webkit-border-radius: 10px; }
.shadowed { box-shadow: 0px 0px 20px #333; -webkit-box-shadow: 0px 0px 20px #333; -moz-box-shadow: 0px 0px 20px #333;}

/*****
 * HEADER
 */
#header { height:110px; margin-bottom:10px;}
#wooki { width: 300px; float:left; padding:20px 0px;}

#signin-box { padding-top:10px; background: url('../img/bubble-signin-top.png') no-repeat 190px 0px; position:absolute; width:260px; display:none;}
#signin { color:white; padding: 10px; background:#2F2F32; }
#signin h2 { font-family: Helvetica, Arial, sans-serif; font-size: 20px;}
#signin th { text-align:right; padding:5px; }
#signin td { text-align:left; padding:5px; }
#signin div { text-align:right }
#signin #do-signin { width: 100%; }

#nav { list-style: none; float:right; padding:10px;}
#nav li { display:inline; padding:0px 10px; }
#nav a { text-decoration: none; }

#search { clear:right; float: right; padding: 20px 10px 10px 0px; width:450px; text-align:right;}
#query { width:200px; }
#query:focus { border: 1px solid #FF7351; }
#submitSearch { text-decoration: none; }

/*****
 * BODY
 */
#content { height:300px;}


/*****
 * BOOK LAYOUT
 */
#book-wrapper { background:#C9BB9B; padding-left:40px; }
#book { background:#FFFFFF; padding:10px; }

h1, h2 { font-family: Georgia, serif; }
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { text-decoration: none; color: #2F2F32}

h1 { font-size: 25px; text-align:center; padding:20px; }
h2 { font-size: 23px; }
h3 { font-size: 20px; }

#meta { text-align:center; color:#6E6D65; }

/* table of contents */
#table-of-contents { margin: 10px; padding:0px; }
#table-of-contents li { display:block; padding:10px; list-style:none;}
#table-of-contents h3 { width: 500px; float:left;}
.last-update { padding:0px; line-height:20px; text-align:right; color:#6E6D65;}

